--- a/shard.yml
+++ b/shard.yml
@@ -1,6 +1,6 @@
 name: simple_retry
-version: 1.0.0
+version: 1.1.0
 
 development_dependencies:
   ameba:
-    github: veelenga/ameba
+    github: crystal-ameba/ameba
